SEO: 4 новые статьи (трекер сериалов, уведомления, список, план), публичный FAQ, карточки статей, sitemap

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Planner — планировщик фильмов и сериалов в Telegram</title>
     <meta name="description" content="Movie Planner — удобный сервис для планирования просмотра фильмов и сериалов. Watchlist, напоминания, походы в кино, трекер сериалов, интеграция с Kinopoisk и IMDb.">
-    <meta name="keywords" content="movie planner, планировщик фильмов, watchlist telegram, трекер сериалов, планирование кино, movie planner telegram">
+    <meta name="keywords" content="movie planner, планировщик фильмов, watchlist telegram, трекер сериалов, трекер сериалов telegram, уведомления о новых сериях, бот трекер сериалов telegram, список сериалов telegram, планирование кино, movie planner telegram">
     <meta name="google-site-verification" content="BUJSpGPrPkPnVgLV2eHrFrPVTuumNdtDUwbI9CzQVwM" />
     <!-- Open Graph -->
     <meta property="og:title" content="Movie Planner — планировщик фильмов и сериалов">
@@ -39,7 +39,12 @@
         {"@type": "Question", "name": "Бесплатно ли пользоваться сервисом?", "acceptedAnswer": {"@type": "Answer", "text": "Базовые функции (база фильмов/сериалов, планирование, напоминания) бесплатны. Расширенные возможности (детальная статистика, приоритетные рекомендации, безлимитные подписки на сериалы) доступны по подписке."}},
         {"@type": "Question", "name": "Где хранятся мои данные?", "acceptedAnswer": {"@type": "Answer", "text": "Данные хранятся на защищённом сервере (Railway). Управление только через Telegram-бота. Мы не передаём данные третьим лицам."}},
         {"@type": "Question", "name": "Поддерживаются ли русские и английские названия?", "acceptedAnswer": {"@type": "Answer", "text": "Да. Используются Kinopoisk API для русскоязычных фильмов, IMDb/Letterboxd — для международных."}},
-        {"@type": "Question", "name": "Что делать, если бот не отвечает или возникла ошибка?", "acceptedAnswer": {"@type": "Answer", "text": "Напишите напрямую в Telegram: @zapnikita95. Опишите проблему, желательно со скриншотом — постараюсь ответить в течение нескольких часов."}}
+        {"@type": "Question", "name": "Что делать, если бот не отвечает или возникла ошибка?", "acceptedAnswer": {"@type": "Answer", "text": "Напишите напрямую в Telegram: @zapnikita95. Опишите проблему, желательно со скриншотом — постараюсь ответить в течение нескольких часов."}},
+        {"@type": "Question", "name": "Как настроить уведомления о новых сериях в Telegram?", "acceptedAnswer": {"@type": "Answer", "text": "Добавьте сериал в Movie Planner (ссылкой с Кинопоиска или поиском), откройте карточку и нажмите «Подписаться на новые серии». Бот будет присылать уведомления о выходе эпизодов на Okko, Kinopoisk, ivi и других стримингах."}},
+        {"@type": "Question", "name": "Какой трекер сериалов в Telegram лучше подходит для группы?", "acceptedAnswer": {"@type": "Answer", "text": "Movie Planner — трекер сериалов для Telegram с поддержкой групповых чатов. Добавьте бота в группу — все участники увидят общий список сериалов, смогут отмечать прогресс и планировать совместные просмотры."}},
+        {"@type": "Question", "name": "Можно ли вести общий список сериалов с друзьями?", "acceptedAnswer": {"@type": "Answer", "text": "Да. Создайте группу в Telegram, добавьте туда бота Movie Planner — список сериалов станет общим. Каждый может добавлять сериалы, видеть прогресс друг друга и планировать марафоны."}},
+        {"@type": "Question", "name": "Как отмечать просмотренные эпизоды и смотреть прогресс?", "acceptedAnswer": {"@type": "Answer", "text": "Расширение для Chrome автоматически распознаёт сериал на странице стриминга — нажмите кнопку «Отметить серию». Или отметьте вручную в боте. Прогресс отображается в карточке сериала (например, S2 • E5)."}},
+        {"@type": "Question", "name": "Работает ли трекер сериалов без подписки?", "acceptedAnswer": {"@type": "Answer", "text": "Базовый функционал — база сериалов, отметка эпизодов, уведомления о новых сериях — бесплатен. Расширенные возможности (безлимитные подписки на сериалы, приоритетные уведомления) доступны по подписке."}}
       ]
     }
     </script>
@@ -206,17 +211,90 @@
         </div>
     </section>
 
+    <!-- Public FAQ (SEO) -->
+    <section id="faq-public" class="about">
+        <div class="container">
+            <h2 class="section-title">Частые вопросы</h2>
+            <div class="faq-block">
+                <div class="faq-item">
+                    <div class="faq-head">Как настроить уведомления о новых сериях в Telegram?</div>
+                    <div class="faq-body">Добавьте сериал в Movie Planner (ссылкой с Кинопоиска или поиском), откройте карточку и нажмите «Подписаться на новые серии». Бот будет присылать уведомления о выходе эпизодов на Okko, Kinopoisk, ivi и других стримингах.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-head">Какой трекер сериалов в Telegram лучше подходит для группы?</div>
+                    <div class="faq-body">Movie Planner — трекер сериалов для Telegram с поддержкой групповых чатов. Добавьте бота в группу — все участники увидят общий список сериалов, смогут отмечать прогресс и планировать совместные просмотры.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-head">Можно ли вести общий список сериалов с друзьями?</div>
+                    <div class="faq-body">Да. Создайте группу в Telegram, добавьте туда бота Movie Planner — список сериалов станет общим. Каждый может добавлять сериалы, видеть прогресс друг друга и планировать марафоны.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-head">Как отмечать просмотренные эпизоды и смотреть прогресс?</div>
+                    <div class="faq-body">Расширение для Chrome автоматически распознаёт сериал на странице стриминга — нажмите кнопку «Отметить серию». Или отметьте вручную в боте. Прогресс отображается в карточке сериала (например, S2 • E5).</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-head">Работает ли трекер сериалов без подписки?</div>
+                    <div class="faq-body">Базовый функционал — база сериалов, отметка эпизодов, уведомления о новых сериях — бесплатен. Расширенные возможности (безлимитные подписки на сериалы, приоритетные уведомления) доступны по подписке.</div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-head">Как планировать походы в кино с билетами?</div>
+                    <div class="faq-body">Выберите «В кино» при планировании просмотра, укажите дату и время, прикрепите фото билетов. За 10 минут до сеанса бот пришлёт напоминание вместе с вашими билетами.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Articles -->
-    <section id="articles-list" class="about">
+    <section id="articles-list" class="articles-section">
         <div class="container">
             <h2 class="section-title">Полезные статьи</h2>
-            <ul class="articles-links">
-                <li><a href="/articles/kak-vesti-watchlist.html">Как вести список желаемого (watchlist)</a></li>
-                <li><a href="/articles/vs-letterboxd-trakt.html">Movie Planner vs Letterboxd vs Trakt</a></li>
-                <li><a href="/articles/kak-plan-pohod-kino.html">Как планировать походы в кино</a></li>
-                <li><a href="/articles/top-10-serialov.html">Топ-10 возможностей для сериалов</a></li>
-                <li><a href="/articles/instrukciya-novichkam.html">Инструкция для новичков</a></li>
-            </ul>
+            <div class="articles-grid">
+                <a href="/articles/treker-serialov-telegram.html" class="article-card">
+                    <span class="article-card-icon">📺</span>
+                    <span class="article-card-title">Трекер сериалов в Telegram</span>
+                    <span class="article-card-desc">Уведомления о новых сериях и прогресс просмотра</span>
+                </a>
+                <a href="/articles/uvedomleniya-o-novyh-seriyah.html" class="article-card">
+                    <span class="article-card-icon">🔔</span>
+                    <span class="article-card-title">Уведомления о новых сериях</span>
+                    <span class="article-card-desc">Как не пропустить эпизод любимого сериала</span>
+                </a>
+                <a href="/articles/spisok-serialov-v-telegram.html" class="article-card">
+                    <span class="article-card-icon">👥</span>
+                    <span class="article-card-title">Общий список сериалов</span>
+                    <span class="article-card-desc">Групповой трекер и марафоны с друзьями</span>
+                </a>
+                <a href="/articles/plan-prosmotra-serialov.html" class="article-card">
+                    <span class="article-card-icon">📅</span>
+                    <span class="article-card-title">Планирование просмотра сериалов</span>
+                    <span class="article-card-desc">Трекер и напоминания в Telegram</span>
+                </a>
+                <a href="/articles/kak-vesti-watchlist.html" class="article-card">
+                    <span class="article-card-icon">📚</span>
+                    <span class="article-card-title">Как вести watchlist</span>
+                    <span class="article-card-desc">Список желаемого: фильмы и сериалы</span>
+                </a>
+                <a href="/articles/top-10-serialov.html" class="article-card">
+                    <span class="article-card-icon">⭐</span>
+                    <span class="article-card-title">Топ-10 возможностей для сериалов</span>
+                    <span class="article-card-desc">Всё, что умеет Movie Planner</span>
+                </a>
+                <a href="/articles/vs-letterboxd-trakt.html" class="article-card">
+                    <span class="article-card-icon">⚖️</span>
+                    <span class="article-card-title">Movie Planner vs Letterboxd vs Trakt</span>
+                    <span class="article-card-desc">Сравнение сервисов</span>
+                </a>
+                <a href="/articles/kak-plan-pohod-kino.html" class="article-card">
+                    <span class="article-card-icon">🎫</span>
+                    <span class="article-card-title">Походы в кино</span>
+                    <span class="article-card-desc">Планирование и билеты</span>
+                </a>
+                <a href="/articles/instrukciya-novichkam.html" class="article-card">
+                    <span class="article-card-icon">🚀</span>
+                    <span class="article-card-title">Инструкция для новичков</span>
+                    <span class="article-card-desc">Первые шаги за 5 минут</span>
+                </a>
+            </div>
         </div>
     </section>
     </main>
