Hero: компактнее отступы, logo в header (иконка как в расширении)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Site Header -->
     <header class="site-header" id="site-header">
         <div class="container header-inner">
-            <a href="/" class="header-logo" data-landing="landing">Movie Planner</a>
+            <a href="/" class="header-logo" data-landing="landing"><img src="images/icon48.png" alt="" class="header-logo-img">Movie Planner</a>
             <nav class="header-nav">
                 <button type="button" class="btn btn-small btn-primary" data-action="login">Войти</button>
                 <div class="header-user-wrap hidden" id="header-user-wrap">
