Карусели: мобилка full-width, кнопки поверх, клик — лайтбокс с zoom (1x→1.5x→2x)

--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                     <button type="button" class="carousel-btn carousel-btn-prev" aria-label="Назад">←</button>
                     <div class="carousel-viewport">
                         <div class="carousel-track">
-                            <div class="carousel-slide"><img src="images/carousel-bot-01.webp" alt="Скриншот бота 1" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-02.webp" alt="Скриншот бота 2" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-03.webp" alt="Скриншот бота 3" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-04.png" alt="Напоминание" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-05.png" alt="Планирование" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-06.png" alt="Кинотеатр: бот ждёт билет" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-07.png" alt="Кинотеатр: бот получил билет" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-bot-08.png" alt="Оценка фильма в группе" loading="lazy"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-01.webp" alt="Скриншот бота 1" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-02.webp" alt="Скриншот бота 2" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-03.webp" alt="Скриншот бота 3" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-04.png" alt="Напоминание" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-05.png" alt="Планирование" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-06.png" alt="Кинотеатр: бот ждёт билет" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-07.png" alt="Кинотеатр: бот получил билет" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-bot-08.png" alt="Оценка фильма в группе" loading="lazy" class="carousel-img" tabindex="0"></div>
                         </div>
                     </div>
                     <button type="button" class="carousel-btn carousel-btn-next" aria-label="Вперёд">→</button>
@@ -178,15 +178,15 @@
                     <button type="button" class="carousel-btn carousel-btn-prev" aria-label="Назад">←</button>
                     <div class="carousel-viewport">
                         <div class="carousel-track">
-                            <div class="carousel-slide"><img src="images/carousel-ext-01.png" alt="Стриминг: добавить сериал" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-02.png" alt="Стриминг: сериал" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-03.png" alt="Стриминг: серия" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-04.png" alt="Просмотренная серия" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-05.png" alt="Клик по расширению при непросмотренной серии" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-06.png" alt="Оценка просмотренного фильма" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-07.png" alt="Кинотеатр: поиск" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-08.png" alt="Кинотеатр: билет" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-ext-09.png" alt="Кинотеатр: планирование" loading="lazy"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-01.png" alt="Стриминг: добавить сериал" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-02.png" alt="Стриминг: сериал" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-03.png" alt="Стриминг: серия" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-04.png" alt="Просмотренная серия" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-05.png" alt="Клик по расширению при непросмотренной серии" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-06.png" alt="Оценка просмотренного фильма" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-07.png" alt="Кинотеатр: поиск" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-08.png" alt="Кинотеатр: билет" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-ext-09.png" alt="Кинотеатр: планирование" loading="lazy" class="carousel-img" tabindex="0"></div>
                         </div>
                     </div>
                     <button type="button" class="carousel-btn carousel-btn-next" aria-label="Вперёд">→</button>
@@ -200,10 +200,10 @@
                     <button type="button" class="carousel-btn carousel-btn-prev" aria-label="Назад">←</button>
                     <div class="carousel-viewport">
                         <div class="carousel-track">
-                            <div class="carousel-slide"><img src="images/carousel-cab-01.png" alt="Планы в личном кабинете" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-cab-02.png" alt="Непросмотренные серии" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-cab-03.png" alt="Сериалы в личном кабинете" loading="lazy"></div>
-                            <div class="carousel-slide"><img src="images/carousel-cab-04.png" alt="Групповые оценки" loading="lazy"></div>
+                            <div class="carousel-slide"><img src="images/carousel-cab-01.png" alt="Планы в личном кабинете" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-cab-02.png" alt="Непросмотренные серии" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-cab-03.png" alt="Сериалы в личном кабинете" loading="lazy" class="carousel-img" tabindex="0"></div>
+                            <div class="carousel-slide"><img src="images/carousel-cab-04.png" alt="Групповые оценки" loading="lazy" class="carousel-img" tabindex="0"></div>
                         </div>
                     </div>
                     <button type="button" class="carousel-btn carousel-btn-next" aria-label="Вперёд">→</button>
@@ -569,6 +569,15 @@
             </div>
         </div>
     </footer>
+    <!-- Lightbox для карусели -->
+    <div id="lightbox" class="lightbox hidden" aria-hidden="true">
+        <div class="lightbox-backdrop"></div>
+        <button type="button" class="lightbox-close" aria-label="Закрыть">&times;</button>
+        <div class="lightbox-content">
+            <img src="" alt="" id="lightbox-img">
+            <p class="lightbox-hint">Нажмите для приближения · клик сбоку — закрыть</p>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
