Карусели: свайп + лайтбокс навигация (←→ кнопки, свайп, клик по краям)

--- a/index.html
+++ b/index.html
@@ -573,9 +573,11 @@
     <div id="lightbox" class="lightbox hidden" aria-hidden="true">
         <div class="lightbox-backdrop"></div>
         <button type="button" class="lightbox-close" aria-label="Закрыть">&times;</button>
+        <button type="button" class="lightbox-nav lightbox-prev" aria-label="Назад">‹</button>
+        <button type="button" class="lightbox-nav lightbox-next" aria-label="Вперёд">›</button>
         <div class="lightbox-content">
             <img src="" alt="" id="lightbox-img">
-            <p class="lightbox-hint">Нажмите для приближения · клик сбоку — закрыть</p>
+            <p class="lightbox-hint">← → листать · клик по центру — zoom · свайп или стрелки</p>
         </div>
     </div>
     <script src="app.js"></script>
